tests/ui/traits/fn-pointer/bare-fn-no-impl-fn-ptr-99875.stderr
error[E0277]: the trait bound `fn(Argument) -> Return {function}: Trait` is not satisfied
  --> $DIR/bare-fn-no-impl-fn-ptr-99875.rs:14:11
   |
LL |     takes(function);
   |     ----- ^^^^^^^^ the trait `Trait` is not implemented for fn item `fn(Argument) -> Return {function}`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `takes`
  --> $DIR/bare-fn-no-impl-fn-ptr-99875.rs:11:18
   |
LL | fn takes(_: impl Trait) {}
   |                  ^^^^^ required by this bound in `takes`
help: the trait `Trait` is implemented for fn pointer `fn(Argument) -> Return`, try casting using `as`
   |
LL |     takes(function as fn(Argument) -> Return);
   |                    +++++++++++++++++++++++++

error[E0277]: the trait bound `{closure@$DIR/bare-fn-no-impl-fn-ptr-99875.rs:16:11: 16:34}: Trait` is not satisfied
  --> $DIR/bare-fn-no-impl-fn-ptr-99875.rs:16:11
   |
LL |     takes(|_: Argument| -> Return { todo!() });
   |     ----- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Trait` is not implemented for closure `{closure@$DIR/bare-fn-no-impl-fn-ptr-99875.rs:16:11: 16:34}`
   = help: the trait `Trait` is implemented for fn pointer `fn(Argument) -> Return`
note: required by a bound in `takes`
  --> $DIR/bare-fn-no-impl-fn-ptr-99875.rs:11:18
   |
LL | fn takes(_: impl Trait) {}
   |                  ^^^^^ required by this bound in `takes`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
